--- a/config/database.yml
+++ b/config/database.yml
@@ -81,5 +81,6 @@ test:
 production:
   <<: *default
   database: feng_production
+  host: localhost
   username: feng
   password: <%= ENV['FENG_DATABASE_PASSWORD'] %>
